--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,22 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    dataBinding {
+        enabled = true
     }
 }
 
@@ -25,6 +35,33 @@ dependencies {
     implementation 'io.reactivex:rxjava:1.3.0'
 
     implementation project(':library')
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+
+    implementation ('io.socket:socket.io-client:1.0.0') {
+      // excluding org.json which is provided by Android
+      exclude group: 'org.json', module: 'json'
+    }
+
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
+    implementation 'com.facebook.fresco:fresco:1.9.0'
+    implementation 'com.facebook.fresco:animated-gif:1.9.0'
+
+    implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
+    implementation 'com.airbnb.android:lottie:2.5.4'
+
+    implementation 'com.github.promeg:tinypinyin:2.0.3'
+
+    implementation 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.3.0'
+
+    // Room components
+    implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$rootProject.roomVersion"
+    androidTestImplementation "android.arch.persistence.room:testing:$rootProject.roomVersion"
+
+    // Lifecycle components
+    implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
+    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
